change to NormalBullet

--- a/project.json
+++ b/project.json
@@ -14,7 +14,7 @@
         "src/resource.js",
         "src/GameLayer.js",
         "src/Ship.js",
-        "src/Bullet.js",
+        "src/NormalBullet.js",
         "src/FastBullet.js",
         "src/WaveBullet.js"
     ]
