--- a/project.json
+++ b/project.json
@@ -16,6 +16,7 @@
         "src/Ship.js",
         "src/NormalBullet.js",
         "src/FastBullet.js",
-        "src/WaveBullet.js"
+        "src/WaveBullet.js",
+        "src/Bullet.js"
     ]
 }
